--- a/frontend/src/component/navbar/navbar.css
+++ b/frontend/src/component/navbar/navbar.css
@@ -1,16 +1,19 @@
 .navbar {
   width: 100%;
   height: 40px;
+  position: absolute;
   background-color: #272727;
   display: flex;
   justify-content: center;
+  top: 0;
+  left: 0;
 }
 
 .navbar .content {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 414px;
+  width: 40vw;
 }
 
 .navbar .content .brand {
