--- a/frontend/src/component/navbar/navbar.css
+++ b/frontend/src/component/navbar/navbar.css
@@ -26,20 +26,35 @@
   flex-direction: row;
 }
 
-.navbar .content .link-page p {
-  margin: 0px 8px 0px 8px;
+.navbar .content .link-page a {
+  margin: 0 1rem;
   color: white;
   font-size: 14px;
+  text-decoration: none;
+  transition: all ease-in-out 100ms;
 }
 
-.navbar .content .link-create-button {
-  font-size: 20px;
-  width: 30px;
-  height: 30px;
-  border-radius: 50%;
+.navbar .content .link-page a:hover {
+  color: #009BFF;
+}
+
+.navbar .content .create-button {
+  font-size: 16px;
+  height: 25px;
   background-color: #067bf9;
   color: white;
   display: flex;
   justify-content: center;
   align-items: center;
+  border: none;
+  border-radius: 5px;
+  transition: all ease-in-out 150ms;
+}
+
+.navbar .content .create-button:hover {
+  background-color: #459dfc;
+}
+
+.navbar .content .create-button:focus {
+  outline: none;
 }
