--- a/frontend/src/component/navbar/navbar.css
+++ b/frontend/src/component/navbar/navbar.css
@@ -1,7 +1,7 @@
 .navbar {
   width: 100%;
-  height: 40px;
-  position: absolute;
+  height: 50px;
+  position: fixed;
   background-color: #272727;
   display: flex;
   justify-content: center;
@@ -40,7 +40,7 @@
 
 .navbar .content .create-button {
   font-size: 16px;
-  height: 25px;
+  height: 30px;
   background-color: #067bf9;
   color: white;
   display: flex;
@@ -49,6 +49,8 @@
   border: none;
   border-radius: 5px;
   transition: all ease-in-out 150ms;
+  padding: 0 1rem;
+  font-weight: bold;
 }
 
 .navbar .content .create-button:hover {
