--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,38 @@
+@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@300;400;700&display=swap');
+
+@font-face {
+  font-family: "Product Sans";
+  font-weight: 400;
+  src: url(./assets/ProductSans-Regular.ttf);
+}
+
+@font-face {
+  font-family: "Product Sans";
+  font-weight: bold;
+  src: url(./assets/ProductSans-Bold.ttf);
+}
+
+@font-face {
+  font-family: "Product Sans";
+  font-weight: lighter;
+  src: url(./assets/ProductSans-Light.ttf);
+}
+
+*::-webkit-scrollbar {
+  width: 8px;
+}
+
+*::-webkit-scrollbar-track {
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: rgba(116, 116, 116, 0.6);
+}
+
+*::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(70, 70, 70, 0.4);
+}
+
 .App {
   width: 40vw;
   margin: 0 auto;
@@ -10,7 +45,7 @@ body {
 
 * {
   margin: 0;
-  font-family: "Roboto", FontAwesome, -apple-system,
+  font-family: "Product Sans", "Kanit", FontAwesome, -apple-system,
     BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
     "Open Sans", "Helvetica Neue", sans-serif;
 }
