edit little change

--- a/frontend/src/component/card/card.css
+++ b/frontend/src/component/card/card.css
@@ -47,7 +47,7 @@
   width: 90%;
   font-size: 22px;
   font-weight: bold;
-  color: #247fe0;
+  color: #0c68ca;
   background-color: #f3f3f3;
   padding: 5px 10px;
   border-radius: 5px;
