--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -22,8 +22,8 @@
   width: 8px;
 }
 
-*::-webkit-scrollbar-track {
-}
+/* *::-webkit-scrollbar-track {
+} */
 
 *::-webkit-scrollbar-thumb {
   background-color: rgba(116, 116, 116, 0.6);
